--- a/index.html
+++ b/index.html
@@ -82,9 +82,8 @@
       <!-- Slide 1 -->
       <div class="carousel-item active">
         <div class="carousel-container">
-          <h2 class="animate__animated animate__fadeInDown">Selamat Datang diwebsite Official <span>OSBIN</span></h2>
-          <p class="animate__animated fanimate__adeInUp">OSBIN atau OSIS SMK Bina Rahayu</p>
-
+          <h2 class="typewriter" id="typing-animation"></h2>
+          <p class="animate__animated animate__fadeInUp">OSBIN atau OSIS SMK Bina Rahayu</p>
         </div>
       </div>
       <div class="background img-fluid"><img src="assets/img/background/background-header.jpg" alt="background"></div>
