--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@
           <div class="col-lg-8 mt-5 mt-lg-0" data-aos="fade-left">
 
             <form action="https://api.web3forms.com/submit" method="POST" role="form" class="php-email-form">
-              <input type="hidden" name="access_key" value="9f6a7fb1-1986-457e-bac9-6278b7c8002a">
+              <input type="hidden" name="access_key" value="640dd3bd-a298-42cb-9805-3d5ec85ca60b">
               <div class="row">
                 <div class="col-md-6 form-group">
                   <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
@@ -525,6 +525,7 @@
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
   <script src="assets/vendor/php-email-form/validate.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  <script src="https://web3forms.com/client/script.js" async defer></script>
   <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/css/lightbox.min.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox.min.js"></script> -->
 
